--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require": {
         "php": "^7.1",
-        "fzaninotto/faker": "^1.8"
+        "fakerphp/faker": "^1.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
